--- a/src/poet.hpp.in
+++ b/src/poet.hpp.in
@@ -72,7 +72,7 @@ struct RuntimeParameters {
   /*AI surriogate configuration*/
   bool use_ai_surrogate = false; // Can be set with command line flag ---ai-surrogate
   bool disable_training = false; // Can be set in the R input script
-  bool use_k_means_clustering = false; // Can be set in the R input script
+  bool use_clustering = false; // Can be set in the R input script
   bool use_Keras_predictions = false; // Can be set in the R input script
   bool train_only_invalid = false; // Can be set in the R input script
   int batch_size = 2560; // default value determined in test on the UP Turing cluster
