--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "ext/iphreeqc"]
 	path = ext/iphreeqc
 	url = ../iphreeqc.git
+[submodule "ext/naa-communication-prototype"]
+	path = ext/naa-communication-prototype
+	url = gfz:naaice/naa-communication-prototype.git
