--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "ext/iphreeqc"]
 	path = ext/iphreeqc
 	url = ../iphreeqc.git
+[submodule "ext/dht"]
+	path = ext/dht
+	url = https://gitup.uni-potsdam.de/mluebke/dht_ucx.git
