--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,7 +12,7 @@ get_filename_component(TEST_RInsideSourceFile "RInsidePOET_funcs.R" REALPATH)
 configure_file(testDataStructures.hpp.in testDataStructures.hpp)
 target_include_directories(testPOET PRIVATE "${CMAKE_CURRENT_BINARY_DIR}")
 
-add_custom_target(check
+add_custom_target(check_poet
     COMMAND $<TARGET_FILE:testPOET>
     DEPENDS testPOET
 )
