--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,12 +28,12 @@ if (POET_PREPROCESS_BENCHS)
 endif()
 
 # as tug will also pull in doctest as a dependency
-set(TUG_ENABLE_TESTING ON CACHE BOOL "" FORCE)
+set(TUG_ENABLE_TESTING OFF CACHE BOOL "" FORCE)
 
 add_subdirectory(ext/tug EXCLUDE_FROM_ALL)
 add_subdirectory(ext/iphreeqc EXCLUDE_FROM_ALL)
 
-option(POET_ENABLE_TESTING "Build test suite for POET" ON)
+option(POET_ENABLE_TESTING "Build test suite for POET" OFF)
 
 if (POET_ENABLE_TESTING)
   add_subdirectory(test)
